# purple

./: CMakeLists.txt  LICENSE  README.md
scripts/: build.ps1  build.sh  install.ps1  install.sh  package.ps1  package.sh
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/pages/: DetailsPage.cpp  DetailsPage.h  OverviewPage.cpp  OverviewPage.h  SettingsPage.cpp  SettingsPage.h
